Fix spacing/formatting in global style file

--- a/pages/stylesheets/all.scss
+++ b/pages/stylesheets/all.scss
@@ -10,9 +10,11 @@ html.lbh-template > body.lbh-template__body * {
 a {
   color: $hackney-green;
 }
+
 .remove-margin-bottom {
-margin-bottom: 0px;
+  margin-bottom: 0px;
 }
+
 .bold-font {
   font-weight: bold
 }
@@ -22,8 +24,8 @@ margin-bottom: 0px;
 }
 
 .ResourceCard_tags__1Zgh3 {
-float:left;
-margin-bottom: 5px;
+  float:left;
+  margin-bottom: 5px;
 }
 
 .ResourceCard_resource__-Szc9 .ResourceCard_tags__container__3A8cx {
@@ -50,7 +52,9 @@ margin-bottom: 5px;
 .conv-support-text a {
   color: #025ea6;
   font-weight:600;
-}.button-as-link{
+}
+
+.button-as-link {
   background: none!important;
   border: none;
   font: inherit;
